--- a/bluestyle.html
+++ b/bluestyle.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>changes something</title>
+    <title>Just i change in branch for practice purpose</title>
 </head>
 
 <body>
